cmake_minimum_required(VERSION 3.9)
cmake_policy(SET CMP0069 NEW) # Link time optimization support

project(liborbum CXX)

set(COMMON_SRC_FILES
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Constants.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Options.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Bitfield.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Bus/BusContext.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Bus/ByteBus.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Bus/ByteBusMappable.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/FifoQueue/DmaFifoQueue.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/FifoQueue/FifoQueue.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/FpuFlags.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Memory/ArrayByteMemory.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Memory/ArrayHwordMemory.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Memory/ByteMemory.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Memory/HwordMemory.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Mips/BranchDelaySlot.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Mips/MipsCoprocessor.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Mips/MipsCoprocessor0.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Mips/MipsInstruction.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Mips/MipsInstructionInfo.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Mips/MmuAccess.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Primitive.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/ByteRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/DwordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/HwordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/MapperHwordWordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/QwordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/SizedByteRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/SizedDwordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/SizedHwordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/SizedQwordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/SizedWordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/WordRegister.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/Register/PcRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/ScopeLock.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Common/Types/TranslationCache/TranslationCache.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/CController.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Cdvd/CCdvd.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Cdvd/CCdvd.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Cdvd/CCdvd_SCMD.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/ControllerEvent.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/ControllerType.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/CEeCore.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/CEeCore.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_ALU_OTHERS.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_BREAK_TRAP.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_CALL.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_COMPARE.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_COND_BRANCH_JUMP.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_COP2.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_DFC.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_FLOAT.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_INTEGER_ADD_SUB.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_INTEGER_MULT_ADD.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_INTEGER_MULT_DIV.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_LOAD_MEM.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_LOGICAL.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_MIN_MAX.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_OTHERS.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_REG_TRANSFER.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_REORDERING.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_SHIFT.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_SPECIAL_TRANSFER.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_STORE_MEM.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Dmac/CEeDmac.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Dmac/CEeDmac.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Dmac/CEeDmac_CHAIN.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Gif/CGif.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Gif/CGif.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Intc/CEeIntc.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Intc/CEeIntc.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Ipu/CIpu.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Ipu/CIpu.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Timers/CEeTimers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Timers/CEeTimers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vif/CVif.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vif/CVif.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/VuBranchDelaySlot.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_CONVERT.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_EFU.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_FLAG.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_FLOAT.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_INTEGER.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_OTHER.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_TRANSFER.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Gs/Core/CGsCore.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Gs/Core/CGsCore.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Gs/Crtc/CCrtc.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Gs/Crtc/CCrtc.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/CIopCore.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/CIopCore.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_ALU.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_BRANCH_JUMP.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_LOAD_STORE_MEM.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_OTHERS.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_SPECIAL_TRANSFER.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Dmac/CIopDmac.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Dmac/CIopDmac.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Intc/CIopIntc.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Intc/CIopIntc.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Sio0/CSio0.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Sio0/CSio0.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Sio2/CSio2.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Sio2/CSio2.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Timers/CIopTimers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Iop/Timers/CIopTimers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Spu2/CSpu2.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Controller/Spu2/CSpu2.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Core.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Core.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/CdvdFifoQueues.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/CdvdFifoQueues.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/CdvdNvrams.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/CdvdNvrams.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/CdvdRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/CdvdRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/CdvdRtc.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/CdvdRtc.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/RCdvd.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Cdvd/RCdvd.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreCop0.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreCop0.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreCop0Registers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreCop0Registers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreException.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreFpu.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreFpu.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreFpuRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreFpuRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreInstruction.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreInstruction.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreR5900.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreR5900.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreTlb.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreTlb.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/EeCoreTlbEntry.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/REeCore.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Core/REeCore.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/EeDmacChannelRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/EeDmacChannelRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/EeDmacChannels.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/EeDmacConstants.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/EeDmacRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/EeDmacRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/EeDmatag.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/REeDmac.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Dmac/REeDmac.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/EeRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/EeRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Gif/RGif.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Gif/RGif.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Intc/EeIntcConstants.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Intc/EeIntcRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Intc/EeIntcRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Intc/REeIntc.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Intc/REeIntc.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Ipu/IpuRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Ipu/IpuRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Ipu/RIpu.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Ipu/RIpu.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/REe.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/REe.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Timers/EeTimersUnitRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Timers/EeTimersUnitRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Timers/EeTimersUnits.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Timers/EeTimersUnits.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Timers/REeTimers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Timers/REeTimers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/RVpu.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vif/RVif.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vif/RVif.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vif/VifcodeInstruction.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vif/VifcodeInstruction.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vif/VifUnitRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vif/VifUnitRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vif/VifUnits.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vif/VifUnits.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/VpuRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/RVu.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/RVu.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/VuInstruction.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/VuRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/VuUnitRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/VuUnitRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/VuUnits.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/VuUnits.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/VuVectorField.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Ee/Vpu/Vu/VuVectorField.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Gs/Crtc/RCrtc.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Gs/RGs.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Gs/RGs.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreCop0.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreCop0.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreCop0Registers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreCop0Registers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreException.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreInstruction.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreInstruction.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreR3000.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/IopCoreR3000.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/RIopCore.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Core/RIopCore.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/IopDmacChannelRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/IopDmacChannelRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/IopDmacChannels.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/IopDmacConstants.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/IopDmacRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/IopDmacRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/IopDmatag.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/RIopDmac.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Dmac/RIopDmac.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Intc/IopIntcConstants.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Intc/IopIntcRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Intc/IopIntcRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Intc/RIopIntc.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/RIop.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/RIop.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio0/RSio0.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio0/Sio0Registers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio0/Sio0Registers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio2/RSio2.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio2/RSio2.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio2/Sio2Registers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio2/Sio2Registers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio2/Sio2PortRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio2/Sio2PortRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio2/Sio2Ports.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Sio2/Sio2Ports.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Timers/IopTimersUnitRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Timers/IopTimersUnitRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Timers/IopTimersUnits.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Timers/IopTimersUnits.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Timers/RIopTimers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Iop/Timers/RIopTimers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/RResources.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/RResources.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/SbusFifoQueues.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/SbusFifoQueues.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/SbusRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/SbusRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/RSpu2.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/RSpu2.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2CoreConstants.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2CoreRegisters.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2CoreRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2Cores.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2Cores.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2CoreVoice.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2CoreVoiceRegisters.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2Registers.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Resources/Spu2/Spu2Registers.hpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Utilities/Utilities.cpp"
    "${CMAKE_SOURCE_DIR}/liborbum/src/Utilities/Utilities.hpp"
)

add_library(orbum "${COMMON_SRC_FILES}")

target_include_directories(
    orbum 
    PUBLIC
        "${Boost_INCLUDE_DIR}"
        "${CMAKE_SOURCE_DIR}/external/cereal/include"
        "${CMAKE_SOURCE_DIR}/liborbum/src"
)

# TODO: Sort out later into proper build configurations.
# Also disable some warnings...
target_compile_definitions(
    orbum 
    PUBLIC 
        "_SCL_SECURE_NO_WARNINGS"
        "_SILENCE_CXX17_OLD_ALLOCATOR_MEMBERS_DEPRECATION_WARNING"
        "_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING"
        "BUILD_DEBUG"
)

target_link_libraries(
    orbum 
    PUBLIC
        utilities
        ${Boost_LIBRARIES}
)

install(
    TARGETS orbum 
    ARCHIVE DESTINATION "lib/static"
    LIBRARY DESTINATION "lib"
)
